[package]
name = "tsync"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.17.8"
serde = { version = "1.0.188", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
clap_complete = "4.5.32"
