[package]
name = "tsync"
version = "0.1.2"
authors = ["Curstantine <curstantine@proton.me>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.57"
colored = "3.0.0"
indicatif = "0.18.0"
serde = { version = "1.0.219", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
