[package]
name = "tsync"
version = "0.1.3"
authors = ["Curstantine <curstantine@proton.me>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
colored = "3.1.1"
indicatif = "0.18.4"
symphonia = { version = "0.5.5", features = ["all", "opt-simd"] }
